2.1.8 - Remove standalone-utils since we only ever needed it for a StringUtil translation. - Clean-up imports via IntelliJ